--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
 # Project dependencies
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+
 node_modules
 .cache/
+
 # Build directory
+
 public/
 .DS_Store
-yarn-error.log
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test.local
+.env.production
+.env.production.local
+
+# Misc
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
