--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "name": "portfolio",
+  "description": "Portfolio",
+  "version": "0.1.0",
+  "author": "Matthew Bliffert",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-source-contentful": "^1.3.41",
+    "prop-types": "^15.6.1",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
@@ -21,6 +24,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "prettier": "^1.10.2"
   }
 }
