--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-react-helmet": "^2.0.3",
-    "gatsby-source-contentful": "^1.3.41",
+    "gatsby-source-contentful": "^1.3.43",
+    "gatsby-transformer-remark": "^1.7.36",
     "prop-types": "^15.6.1",
     "react-helmet": "^5.2.0"
   },
@@ -20,7 +21,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "format": "prettier --trailing-comma es5 --semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
