--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-plugin-styled-components": "^2.0.9",
+    "gatsby-plugin-typography": "^1.7.18",
     "gatsby-source-contentful": "^1.3.43",
     "gatsby-transformer-remark": "^1.7.36",
     "prop-types": "^15.6.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-components": "^3.2.2"
   },
   "keywords": [
     "gatsby"
